# dreamEngine

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  Doxyfile  build.bat  build.sh  genindex.html  index.html  main.cpp  objects.inv  search.html  searchindex.js  version.h.in
.github/: CODEOWNERS
.github/workflows/: build.yml  check-format.yml  docs.yml
Editor/: CMakeLists.txt  README.md
Editor/include/: editor_main.h
Editor/src/: editor_main.cpp
Engine/: CMakeLists.txt  README.md
Engine/include/: Engine.h  engine_core.h
Engine/include/core/alloc/: Allocator.h  ArenaAllocator.h  MallocAllocator.h
Engine/include/core/logger/: ConsoleLogger.h  LogLevel.h  LogManager.h  Logger.h
Engine/include/core/timer/: TimeUtils.h  Timer.h  TimerManager.h
Engine/src/: Engine.cpp  engine_core.cpp
Engine/src/core/alloc/: Allocator.cpp  ArenaAllocator.cpp  MallocAllocator.cpp
Engine/src/core/logger/: ConsoleLogger.cpp  FileLogger.cpp  LogManager.cpp  Logger.cpp
Engine/src/core/timer/: TimeUtils.cpp  Timer.cpp  TimerManager.cpp
SampleGame/: CMakeLists.txt  README.md
SampleGame/src/: main.cpp
_sources/: index.rst.txt
docs/: Makefile  README.md  api.rst  conf.py  index.rst
